docs: change API spec base on best practice and add Makefile to automasi general API spec
